@@ -1,3 +1,8 @@
+2007-11-20  Benoit Sigoure  <tsuna@lrde.epita.fr>
+
+	Sync boost.m4 with upstream.
+	* boost.m4: Here.
+
 2007-11-20  Matthieu Nottale  <nottale@gostai.com>
 
 	Properly quote function arguments.
